--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/bootstrap.7eaf8f8f.css"> <link rel="stylesheet" href="styles/bootstrap-theme.6a07b341.css"> <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <link rel="stylesheet" href="css/leaflet.extra-markers.css"> <link rel="stylesheet" href="css/leaflet.css"> <link rel="stylesheet" href="css/ngProgress.css">  <body ng-app="deskappApp"> <div ng-show="gameBar" ng-include="'views/headerGame.html'" class="navbar-fixed-top header"></div> <div ng-show="!gameBar" ng-include="'views/headerLogin.html'" class="navbar-fixed-top header"></div> <div ng-show="gameBar" ng-include="'views/navbar.html'" ng-show="true"></div> <!-- Add your site or application content here --> <!--<div class="header">
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/bootstrap.3808a1fb.css"> <link rel="stylesheet" href="styles/bootstrap-theme.69662c21.css"> <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <link rel="stylesheet" href="css/leaflet.extra-markers.css"> <link rel="stylesheet" href="css/leaflet.css"> <link rel="stylesheet" href="css/ngProgress.css">  <body ng-app="deskappApp"> <div ng-show="gameBar" ng-include="'views/headerGame.html'" class="navbar-fixed-top header"></div> <div ng-show="!gameBar" ng-include="'views/headerLogin.html'" class="navbar-fixed-top header"></div> <div ng-show="gameBar" ng-include="'views/navbar.html'" ng-show="true"></div> <!-- Add your site or application content here --> <!--<div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -37,11 +37,11 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>--> <script src="scripts/vendor.ffbc03cc.js"></script> <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    </script>--> <script src="scripts/vendor.082c6a58.js"></script> <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script src="js/circle-progress.js"></script>
-    <script src="js/frontend.js"></script>--> <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script> <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> <script src="js/angular-round-progress-directive.js"></script> <script src="js/leaflet.extra-markers.js"></script> <!--
+    <script src="js/frontend.js"></script>--> <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script> <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> <script src="js/angular-round-progress-directive.js"></script> <script src="js/angular-bootstrap-lightbox.js"></script> <script src="js/leaflet.extra-markers.js"></script> <!--
     <script src="js/geolib.js"></script>
     <script src="js/geolib.elevation.js"></script>
     <script src="js/map-extend.js"></script>
---> <script src="js/angular-leaflet-directive.min.js"></script> <script src="scripts/scripts.3c84c891.js"></script>  
+--> <script src="js/angular-leaflet-directive.min.js"></script> <script src="scripts/scripts.6ce39cb2.js"></script>  
